return liked from stats
