# src/main/kotlin/com/wutsi/like/endpoint/StatsController.kt
@@ -5,6 +5,7 @@ import com.wutsi.like.model.GetStatsResponse
 import org.springframework.web.bind.`annotation`.GetMapping
 import org.springframework.web.bind.`annotation`.RequestParam
 import org.springframework.web.bind.`annotation`.RestController
+import kotlin.Long
 import kotlin.String
 
 @RestController
@@ -12,6 +13,9 @@ public class StatsController(
     private val `delegate`: StatsDelegate
 ) {
     @GetMapping("/v1/likes/stats")
-    public fun invoke(@RequestParam(name = "canonical_url", required = false) canonicalUrl: String):
-        GetStatsResponse = delegate.invoke(canonicalUrl)
+    public fun invoke(
+        @RequestParam(name = "canonical_url", required = false) canonicalUrl: String,
+        @RequestParam(name = "user_id", required = false) userId: Long? = null,
+        @RequestParam(name = "device_uuid", required = false) deviceUuid: String? = null
+    ): GetStatsResponse = delegate.invoke(canonicalUrl, userId, deviceUuid)
 }
